# sdstate

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/module_sdstate/: __init__.py  lanczos_utils.py  pauli_utils.py  sdstate_utils.py
src/sdstate/: __init__.py  lanczos_utils.py  sdstate.py
tests/: test_pauli_utils.py  test_sdstate.py
